[package]
name = "tp"
description = "A command-line tool for managing and loading tmux sessions from configuration files"
version = "1.0.0"
edition = "2024"
authors = ["Emerson Max de Medeiros Silva <emersonmx@gmail.com>"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.50"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"

[dev-dependencies]
mockall = "0.13.1"
temp-env = "0.3.6"
tempfile = "3.20.0"
